<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/part3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loading3"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:text="@string/hibox"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dip">

        <LinearLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:src="@mipmap/logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hiboxV"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_drawable_bg"
        android:layout_marginTop="30dip">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#DBDBDB" />
        <LinearLayout
            android:id="@+id/input_layout_rePsw"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/input_rePsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:background="#00000000"
                android:text="@string/developer"
                android:padding="5dip"
                android:textSize="16sp" />


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#DBDBDB" />
        <LinearLayout
            android:id="@+id/input_layout_rePsw2"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/input_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:background="#00000000"
                android:text="@string/app_about"
                android:padding="5dip"
                android:textSize="16sp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#DBDBDB" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/input_layout_rePsw4"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center_vertical"
        android:background="@drawable/radius_drawable_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/input_about2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginStart="10dip"
            android:background="#00000000"
            android:text="@string/app_phone"
            android:padding="5dip"
            android:textSize="16sp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#DBDBDB" />


</LinearLayout>